--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -6,10 +6,9 @@
       $("head").load("../../components/head.html");
     </script>
     <script>
-
       function make_editable(element) {
-        $('#edit-popup').show();
-        const popup = $('#popup-data');
+        $("#edit-popup").show();
+        const popup = $("#popup-data");
 
         // popup.text("id is : " + element.attr('id'));
       }
@@ -23,17 +22,17 @@
           if (e.target === this) {
             $(this).hide();
           }
-        })
+        });
 
         $(".exit-button").click(function (e) {
           if (e.target === this) {
             $("#edit-popup").hide();
           }
-        })
+        });
       }
 
       $(document).ready(function () {
-        $('#edit-popup').hide();
+        $("#edit-popup").hide();
 
         const headers_strings = {
           STATUS: "requestState",
@@ -70,7 +69,16 @@
               <div class="row">
                 <label class="col-1 col-form-label">Product</label>
                 <div class="col">
-                  <input id="req_id" name="req_id" type="text" class="form-control" aria-describedby="req_idHelpBlock" required="required" readonly hidden>
+                  <input
+                    id="req_id"
+                    name="req_id"
+                    type="text"
+                    class="form-control"
+                    aria-describedby="req_idHelpBlock"
+                    required="required"
+                    readonly
+                    hidden
+                  />
                   <div class="row">
                     <div class="form-group col no-gutters">
                       <label class="col-12 col-form-label" for="prod_code">Product Code</label>
@@ -79,7 +87,14 @@
                           <div class="input-group-prepend">
                             <div class="input-group-text"><i class="fa fa-tag"></i></div>
                           </div>
-                          <input id="prod_code" name="prod_code" type="text" class="form-control" aria-describedby="prod_codeHelpBlock" required="required">
+                          <input
+                            id="prod_code"
+                            name="prod_code"
+                            type="text"
+                            class="form-control"
+                            aria-describedby="prod_codeHelpBlock"
+                            required="required"
+                          />
                         </div>
                         <span id="prod_codeHelpBlock" class="form-text text-muted">Automatically generated product code</span>
                       </div>
@@ -93,9 +108,19 @@
                               <i class="fa fa-archive"></i>
                             </div>
                           </div>
-                          <input id="prod" name="prod" type="text" class="form-control" aria-describedby="prodHelpBlock" required="required" readonly>
+                          <input
+                            id="prod"
+                            name="prod"
+                            type="text"
+                            class="form-control"
+                            aria-describedby="prodHelpBlock"
+                            required="required"
+                            readonly
+                          />
                         </div>
-                        <span id="prodHelpBlock" class="form-text text-muted">Insert a product name in the field and select the corresponding one</span>
+                        <span id="prodHelpBlock" class="form-text text-muted"
+                          >Insert a product name in the field and select the corresponding one</span
+                        >
                       </div>
                     </div>
                   </div>
@@ -104,15 +129,39 @@
                       <label class="col-2">Flavour</label>
                       <div class="col-12">
                         <div class="custom-control custom-radio custom-control-inline">
-                          <input name="flavour" id="flavour_0" type="radio" aria-describedby="flavourHelpBlock" required="required" class="custom-control-input" value="red">
+                          <input
+                            name="flavour"
+                            id="flavour_0"
+                            type="radio"
+                            aria-describedby="flavourHelpBlock"
+                            required="required"
+                            class="custom-control-input"
+                            value="red"
+                          />
                           <label for="flavour_0" class="custom-control-label">red</label>
                         </div>
                         <div class="custom-control custom-radio custom-control-inline">
-                          <input name="flavour" id="flavour_1" type="radio" aria-describedby="flavourHelpBlock" required="required" class="custom-control-input" value="blue">
+                          <input
+                            name="flavour"
+                            id="flavour_1"
+                            type="radio"
+                            aria-describedby="flavourHelpBlock"
+                            required="required"
+                            class="custom-control-input"
+                            value="blue"
+                          />
                           <label for="flavour_1" class="custom-control-label">blue</label>
                         </div>
                         <div class="custom-control custom-radio custom-control-inline">
-                          <input name="flavour" id="flavour_2" type="radio" aria-describedby="flavourHelpBlock" required="required" class="custom-control-input" value="green">
+                          <input
+                            name="flavour"
+                            id="flavour_2"
+                            type="radio"
+                            aria-describedby="flavourHelpBlock"
+                            required="required"
+                            class="custom-control-input"
+                            value="green"
+                          />
                           <label for="flavour_2" class="custom-control-label">green</label>
                         </div>
                         <span id="flavourHelpBlock" class="form-text text-muted">Select the flavour of the product</span>
@@ -120,7 +169,6 @@
                     </div>
                   </div>
                 </div>
-
               </div>
 
               <div class="form-group row">
@@ -131,7 +179,16 @@
                 </div>
               </div>
               <div class="form-group row">
-                <input hidden id="date_creation" name="date_creation" type="text" aria-describedby="date_creationHelpBlock" required="required" class="form-control" readonly>
+                <input
+                  hidden
+                  id="date_creation"
+                  name="date_creation"
+                  type="text"
+                  aria-describedby="date_creationHelpBlock"
+                  required="required"
+                  class="form-control"
+                  readonly
+                />
               </div>
               <div class="form-group row">
                 <label for="date_due" class="col-1 col-form-label">Due Date</label>
@@ -142,13 +199,29 @@
                         <i class="fa fa-calendar"></i>
                       </div>
                     </div>
-                    <input id="date_due" name="date_due" type="date" class="form-control" aria-describedby="date_dueHelpBlock" required="required">
+                    <input
+                      id="date_due"
+                      name="date_due"
+                      type="date"
+                      class="form-control"
+                      aria-describedby="date_dueHelpBlock"
+                      required="required"
+                    />
                   </div>
                   <span id="date_dueHelpBlock" class="form-text text-muted">Date before which the counting should be completed</span>
                 </div>
               </div>
               <div class="form-group row">
-                <input hidden id="status" name="status" type="text" class="form-control" aria-describedby="statusHelpBlock" required="required" readonly>
+                <input
+                  hidden
+                  id="status"
+                  name="status"
+                  type="text"
+                  class="form-control"
+                  aria-describedby="statusHelpBlock"
+                  required="required"
+                  readonly
+                />
               </div>
 
               <div class="row">
@@ -162,7 +235,14 @@
                           <i class="fa fa-bar-chart-o"></i>
                         </div>
                       </div>
-                      <input id="count_previous" name="count_previous" type="text" class="form-control" aria-describedby="count_previousHelpBlock" readonly>
+                      <input
+                        id="count_previous"
+                        name="count_previous"
+                        type="text"
+                        class="form-control"
+                        aria-describedby="count_previousHelpBlock"
+                        readonly
+                      />
                     </div>
                     <span id="count_previousHelpBlock" class="form-text text-muted">Automatically generated previous count</span>
                   </div>
@@ -176,7 +256,7 @@
                           <i class="fa fa-refresh"></i>
                         </div>
                       </div>
-                      <input id="count_last" name="count_last" type="text" class="form-control" readonly>
+                      <input id="count_last" name="count_last" type="text" class="form-control" readonly />
                     </div>
                     <span id="count_lastHelpBlock" class="form-text text-muted">Latest count created.</span>
                   </div>
@@ -202,7 +282,6 @@
             <li><a class="dropdown-item" href="#">Oldest</a></li>
             <li><a class="dropdown-item" href="#">Upcoming due date</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Separated link</a></li>
             <li>
               <a class="dropdown-item" href="#">
                 <label class="form-check-label" for="flexCheckChecked">
